[package]
name = "stage-4"
version = "0.1.0"
authors = ["geometrically <jai.a@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.3"
rand = "0.7.3"
log = { version = "0.4.8", features = ["serde"] }
mint = "=0.5.6"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]